Changed the fixtures

--- a/templates/template_fragment/_post.html.twig
+++ b/templates/template_fragment/_post.html.twig
@@ -1,6 +1,6 @@
 <div class="post-link" onclick="window.location.href='/pages/{{page.getId}}';">
         <div class="post-link-content">
-            <img src={{ page.getHeaderImage.getPath }} alt={{page.getHeaderImage.getAlt}}>
+            <img src={{ page.getThumbnail.getPath }} alt={{page.getHeaderImage.getAlt}}>
             <div>
                 <p>{{ page.getTitle }}</p>
                 <p>{{ page.getDescription }}</p>
