Changed the title when a blog is accessed

--- a/templates/blog/user_blog.html.twig
+++ b/templates/blog/user_blog.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-PCThings | Blog
+PCThings | {{ user.getUsername }}'s Blog
 {% endblock %}
 
 {% block pageTitle %}
