Changed page link to text

--- a/templates/template_fragment/_post.html.twig
+++ b/templates/template_fragment/_post.html.twig
@@ -1,4 +1,4 @@
-<div class="post-link" onclick="window.location.href='/pages/{{page.getId}}';">
+<div class="post-link" onclick="window.location.href='/pages/{{page.getPathTitle}}';">
         <div class="post-link-content">
             <img src={{ page.getThumbnail.getPath }} alt={{page.getHeaderImage.getAlt}}>
             <div>
