Changed the footer in all templates

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,7 +39,27 @@
 		</div>
 		<footer>
 			<div class="h-container all-width">
-				{% block footer %}{% endblock %}
+				<div class="v-container w-xl">
+					<div>hi</div>
+					<div>hi</div>
+					<div>hi</div>
+					<div>hi</div>
+					<div>hi</div>
+				</div>
+				<div class="v-container w-m">
+					<div>hi</div>
+					<div>hi</div>
+					<div>hi</div>
+					<div>hi</div>
+					<div>hi</div>
+				</div>
+				<div class="v-container w-m">
+					<div>hi</div>
+					<div>hi</div>
+					<div>hi</div>
+					<div>hi</div>
+					<div>hi</div>
+				</div>
 			</div>
 		</footer>
         
