--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,10 +26,15 @@
 		</div>
 		<div class="h-container full-width wrap-reverse can-grow padding-nav">
 			<div class="v-container w-xs font-medium white border h-auto p-10 m-top-30 child-p-v-5 left-container">
-				<div class="font-medium font-bold">Blog's latest</div>
 
+				<div class="font-medium font-bold">Atricle's latest</div>
+				{% for articles_latest_link in articles_latest %}
+					{{ include('template_fragment/_side_nav_entry.html.twig', {link: "/blog/" ~ articles_latest_link.path_title, title:  articles_latest_link.title}) }}
+				{% endfor %}
+
+				<div class="font-medium font-bold">Blog's latest</div>
 				{% for blogs_latest_link in blogs_latest %}
-					{{ include('template_fragment/_side_nav_entry.html.twig', {blogs_latest_link: blogs_latest_link }) }}
+					{{ include('template_fragment/_side_nav_entry.html.twig', {link: "/blog/" ~ blogs_latest_link.username, title:  blogs_latest_link.title}) }}
 				{% endfor %}
 
 			</div>
