--- a/templates/template_fragment/_side_nav_entry.html.twig
+++ b/templates/template_fragment/_side_nav_entry.html.twig
@@ -1,1 +1,1 @@
-<div class="animated-link border-b" onclick="window.location.href='/blog/{{ blogs_latest_link.username }}';"><div>{{ blogs_latest_link.title }}</div><div>»</div></div>
+<div class="animated-link border-b" onclick="window.location.href='{{ link }}';"><div>{{ title }}</div><div>»</div></div>
