Created the base form for the user to change their account

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
 			<button onclick="window.location.href='/blog';">Blog</button>
 			<button onclick="window.location.href='/contact';">Contact</button>
 			{% if app.user %}
-				<img src="{{ asset(app.user.getProfilPic) }}" class="profile-button" onclick="window.location.href='/login';"></img>
+				<img src="{{ asset(app.user.getProfilPic) }}" class="profile-button" onclick="window.location.href='/user-settings';"></img>
 			{% endif %}
 		</nav>
 		<div class="background-image" style='background: linear-gradient(transparent, var(--color-lighter)), url({% block bgImage %}{% endblock %}) no-repeat center; background-size: cover; background-position: center;'>
