Almost finished the edit user styling

--- a/templates/security/edit_user.html.twig
+++ b/templates/security/edit_user.html.twig
@@ -29,5 +29,6 @@ Log in!
         {{ message }}
     </div>
 {% endfor %}
-{{ form(form) }}
+
+{{ form(form, { 'attr': {'class': 'editUserForm'} }) }}
 {% endblock %}
