--- a/public/css/style.css
+++ b/public/css/style.css
@@ -580,6 +580,18 @@ form {
 	max-width: 900px;
 }
 
+.editUserForm > div div {
+	display: flex;
+	flex-direction: row;
+	padding-bottom: 10px;
+}
+.editUserForm > div div label {
+	flex-basis: auto;
+	min-width: 150px !important;
+	word-break: keep-all;
+	white-space: nowrap;
+}
+
 .alert {
 	border-radius: 5px;
 	padding:10px;
@@ -841,8 +853,11 @@ form {
 }
 
 @media screen and (max-width: 700px) {
-	.post-link .post-link-content {
+	.post-link .post-link-content, .editUserForm > div div {
 		flex-direction: column;
+	}
+	.editUserForm > div div label {
+		width: 100% !important;
 	}
 
 	.post-link .post-link-content>img {
