--- a/templates/security/edit_user.html.twig
+++ b/templates/security/edit_user.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-PCThings | Log in
+PCThings | Edit your profil
 {% endblock %}
 
 {% block pageTitle %}
-Log in!
+Edit your profil
 {% endblock %}
 
 {% block bgImage %}
