--- a/templates/security/edit_user.html.twig
+++ b/templates/security/edit_user.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-PCThings | Edit your profil
+PCThings | Edit your profile
 {% endblock %}
 
 {% block pageTitle %}
-Edit your profil
+Edit your profile
 {% endblock %}
 
 {% block bgImage %}
