Error in the edit_user form are now displayed correctly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -598,6 +598,9 @@ form {
 	margin-top: 5px;
 	margin-bottom: 5px;
 }
+.alert-form {
+	max-width: calc(900px - 24px);
+}
 .alert-danger {
 	background-color: rgb(120, 0, 0);
 	border: 2px solid red;
