--- a/templates/template_fragment/_page_navigation.html.twig
+++ b/templates/template_fragment/_page_navigation.html.twig
@@ -1,9 +1,15 @@
 <div class="page-navigation">
-    <button onclick=""><</button>
+    {% if currentPage != 1 %}
+        <button onclick="window.location.href='/import-picture/{{ currentPage - 1 }}';"><</button>
+    {% endif %}
+    
     <div class="page-navigation-link">
         {% for page in pages %}
             <a href="{{ page.link }}">{{ page.numero }}</a>
         {% endfor %}
     </div>
-    <button onclick="">></button>
+    {% if currentPage != pages|last.numero %}
+        <button onclick="window.location.href='/import-picture/{{ currentPage + 1 }}';">></button>
+    {% endif %}
+    
 </div>
