--- a/templates/template_fragment/_tag_filter.html.twig
+++ b/templates/template_fragment/_tag_filter.html.twig
@@ -1,4 +1,4 @@
-<div class="tag-filter">
+<div class="popup-menu">
     <button onclick="OpenFilterMenu('tagfilter')">filter by tag</button>
     <div id="tagfilter">
         <div>
