--- a/public/css/style.css
+++ b/public/css/style.css
@@ -264,15 +264,25 @@ footer {
 	flex-wrap: wrap;
 }
 .image-grid-col {
+	margin: 5px;
+	flex-basis: 300px !important;
+	flex-grow: 1;
+	background-color: var(--color-lighter);
+	transition: all 0.5s;
+}
+.image-grid-col > div {
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 95%;
-	margin: 5px;
-	background-color: var(--color-lighter);
-	flex-basis: 300px !important;
-	flex-grow: 1;
-	transition: all 0.5s;
+}
+.image-grid-col > p {
+	margin-top: 8px;
+	margin-bottom: 8px;
+	width: calc(100% - 20px);
+	margin-left: 10px;
+	margin-right: 10px;
+	border-top: 1px solid white;
 }
 .image-grid-col:hover {
 	background-color: var(--color-accent-darker);
@@ -283,7 +293,7 @@ footer {
 	box-shadow: 10px 10px 62px 0px rgba(0, 0, 0, 0.75);
 	z-index: 100;
 }
-.image-grid-col > img {
+.image-grid-col > div > img {
 	width: 100%;
 	height: auto;
 	visibility: hidden;
@@ -845,28 +855,28 @@ form {
 	margin-left: 10px;
 }
 
-.tag-filter {
+.popup-menu {
 	width: 100%;
 	height: 2em;
 }
 
-.tag-filter>button {
+.popup-menu>button {
 	width: 100%;
 	height: 100%;
 	border: none;
 	background-color: var(--color-lighter);
 }
 
-.tag-filter>button:hover {
+.popup-menu>button:hover {
 	background-color: var(--color-accent);
 }
 
-.tag-filter>button:active {
+.popup-menu>button:active {
 	transition: all 0.2s;
 	background-color: var(--color-accent-darker);
 }
 
-.tag-filter>div {
+.popup-menu>div {
 	top: 20%;
 	bottom: 20%;
 	left: 20%;
@@ -882,12 +892,12 @@ form {
 	display: none;
 }
 
-.tag-filter>div div {
+.popup-menu>div div {
 	overflow: auto;
 	padding: 5px 0px 5px 0px;
 }
 
-.tag-filter>div>button {
+.popup-menu>div>button {
 	width: 100%;
 	margin-top: 5px;
 }
@@ -940,7 +950,7 @@ form {
 		margin-left: 0px;
 	}
 
-	.tag-filter>div {
+	.popup-menu>div {
 		top: 20%;
 		bottom: 20%;
 		left: 10%;
