--- a/public/css/style.css
+++ b/public/css/style.css
@@ -643,6 +643,9 @@ footer {
 form {
 	max-width: 900px;
 }
+.form-no-max {
+	max-width: 100%;
+}
 
 .editUserForm > div div {
 	display: flex;
@@ -857,7 +860,6 @@ form {
 
 .popup-menu {
 	width: 100%;
-	height: 2em;
 }
 
 .popup-menu>button {
@@ -877,7 +879,7 @@ form {
 }
 
 .popup-menu>div {
-	top: 20%;
+	top: calc(20% + 44px);
 	bottom: 20%;
 	left: 20%;
 	right: 20%;
@@ -890,6 +892,27 @@ form {
 	flex-direction: column;
 	justify-content: space-between;
 	display: none;
+	z-index: 500;
+	overflow: auto;
+}
+.close-popup-menu {
+	width: 30px !important;
+	height: 30px !important;
+	border-radius: 100% !important;
+	border-color: rgb(120, 0, 0);
+	background-image: url("/images/icons/close.png");
+	background-position: center;
+	background-size: 60%;
+	background-repeat: no-repeat;
+	background-color: var(--color);
+	position: fixed;
+	top: calc(20% + 44px - 15px);
+	right: calc(20% - 15px);
+	margin: 0px !important;
+}
+.close-popup-menu:hover {
+	background-color:red;
+	border-color: rgb(120, 0, 0);
 }
 
 .popup-menu>div div {
@@ -951,10 +974,14 @@ form {
 	}
 
 	.popup-menu>div {
-		top: 20%;
+		top: calc(20%-44px);
 		bottom: 20%;
 		left: 10%;
 		right: 10%;
+	}
+	.close-popup-menu {
+		top: calc(20% + 44px - 15px);
+		right: calc(10% - 15px);
 	}
 
 	#menu {
