Added import_picture link to the navbar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,10 @@
 			<button onclick="window.location.href='/pages';">Pages</button>
 			<button onclick="window.location.href='/blog';">Blog</button>
 			<button onclick="window.location.href='/contact';">Contact</button>
+			{% if is_granted('ROLE_IMPORT') %}
+				<button onclick="window.location.href='/import-picture';">import picture</button>
+			{% endif %}
+			
 			{% if app.user %}
 				<img src="{{ asset(app.user.getProfilPic) }}" class="profile-button" onclick="window.location.href='/modify-account';"></img>
 			{% endif %}
