--- a/templates/import/import_picture.html.twig
+++ b/templates/import/import_picture.html.twig
@@ -24,6 +24,11 @@ Imported picture
         {{ message }}
     </div>
 {% endfor %}
+{% for message in app.flashes('error') %}
+    <div class="alert alert-danger">
+        {{ message }}
+    </div>
+{% endfor %}
 
 <!-- import form -->
 <div class="popup-menu">
@@ -53,7 +58,7 @@ Imported picture
         {% for image in images %}
         <div class="image-grid-col">
             <div style="background-image: url('{{ image.getPath }}')"><img src="/images/placeholder.png"></div>
-            <p>{{ image.getTitle }}</p>
+            <p>{{ image.getTitle }} | <a href="/import-picture/modify/{{ image.getId }}">edit</a></p>
         </div>
         {% endfor %}
     </div>
