--- a/templates/home/pages.html.twig
+++ b/templates/home/pages.html.twig
@@ -30,4 +30,5 @@ Pages
     
 </div>
 {{ include('template_fragment/_search.html.twig') }}
+{{ include('template_fragment/_page_navigation.html.twig', {pages: nbPages, currentPage: currentPage, baseLink: baseLink}) }}
 {% endblock %}
