--- a/templates/import/import_picture.html.twig
+++ b/templates/import/import_picture.html.twig
@@ -65,5 +65,5 @@ Imported picture
 </div>
 <button onclick="OpenFilterMenu('importPicture')" style="margin: 5px;">Import</button>
 
-{{ include('template_fragment/_page_navigation.html.twig', {pages: pages, currentPage: currentPage}) }}
+{{ include('template_fragment/_page_navigation.html.twig', {pages: pages, currentPage: currentPage, baseLink: baseLink}) }}
 {% endblock %}
