--- a/templates/template_fragment/_page_navigation.html.twig
+++ b/templates/template_fragment/_page_navigation.html.twig
@@ -1,21 +1,21 @@
 {% if pages %}
 <div class="page-navigation">
     {% if currentPage != 1 %}
-        <button onclick="window.location.href='/import-picture/{{ currentPage - 1 }}';"><</button>
+        <button onclick="window.location.href='{{ baseLink }}{{ currentPage - 1 }}';"><</button>
     {% endif %}
     
     <div class="page-navigation-link">
         {% for page in pages %}
             {% if page.numero == currentPage %}
-                <a href="{{ page.link }}" style="color: white;">{{ page.numero }}</a>        
+                <a href="{{ baseLink }}{{ page.numero }}" style="color: white;">{{ page.numero }}</a>        
             {% else %}
-                <a href="{{ page.link }}" >{{ page.numero }}</a>
+                <a href="{{ baseLink }}{{ page.numero }}" >{{ page.numero }}</a>
             {% endif %}
             
         {% endfor %}
     </div>
     {% if currentPage != pages|last.numero %}
-        <button onclick="window.location.href='/import-picture/{{ currentPage + 1 }}';">></button>
+        <button onclick="window.location.href='{{ baseLink }}{{ currentPage + 1 }}';">></button>
     {% endif %}
     
 </div>
