--- a/templates/template_fragment/_blog.html.twig
+++ b/templates/template_fragment/_blog.html.twig
@@ -1,4 +1,4 @@
-<div class="blog-link" onclick="window.location.href='{{ 'blog/' ~ blogPostLink.username }}';">
+<div class="blog-link" onclick="window.location.href='{{ '/blog/' ~ blogPostLink.username }}';">
     <div class="blog-link-content">
         <img src={{ asset(blogPostLink.profilPic) }}>
         <div>
