--- a/templates/blog/user_blog.html.twig
+++ b/templates/blog/user_blog.html.twig
@@ -21,4 +21,5 @@ PCThings | {{ user.getUsername }}'s Blog
         {{ include('template_fragment/_blog_text.html.twig', {blogPost: blogPost}) }}
     {% endfor %}
 </div>
+{{ include('template_fragment/_page_navigation.html.twig', {pages: nbPages, currentPage: currentPage, baseLink: baseLink}) }}
 {% endblock %}
