Clicking on a blog post in the sidebar make the blog post go green

--- a/templates/template_fragment/_blog_text.html.twig
+++ b/templates/template_fragment/_blog_text.html.twig
@@ -1,4 +1,4 @@
-<div class="blog-post">
+<div class="blog-post" id="{{ blogPost.getId }}">
     <div>
         <div class="blog-post-title">
             {{ blogPost.getTitle}}
