--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,7 +31,9 @@
 html {
 	margin: 0px;
 	min-width: 100%;
-	min-height: 100%;
+	min-height: calc(100% - 64px);
+	padding-top: 64px;
+	overflow: hidden;
 }
 
 body {
@@ -42,10 +44,11 @@ body {
 	font-family: "QuickSand";
 	font-size: var(--text-size);
 	min-width: 100%;
-	height: 100%;
-	min-height: 100vh;
+	/*height: 100%;*/
+	max-height: calc(100vh - 64px);
 	margin: 0px;
 	word-break: break-word;
+	overflow: auto;
 }
 
 .can-grow {
@@ -822,6 +825,11 @@ form {
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
+.blog-post:target > div {
+	background-color: var(--color-lighter);
+	animation-name: anim-target-blog-post;
+  	animation-duration: 1s;
+}
 .info {
 	display: flex;
 	flex-direction: row;
@@ -1019,6 +1027,12 @@ form {
 		flex-direction: column;
 	}
 }
+
+@keyframes anim-target-blog-post {
+	0%   {background-color: var(--color-lighter);}
+	25%  {background-color: var(--color-accent-darker);}
+	100%  {background-color: var(--color-lighter);}
+  }
 
 
 .colorShow {
