--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
 		<div class="background-image" style='background: linear-gradient(transparent, var(--color-lighter)), url({% block bgImage %}{% endblock %}) no-repeat center; background-size: cover; background-position: center;'>
 			<img src="{% block bgImageAff %}{% endblock %}" style="visibility: hidden;" />
 		</div>
-		<div class="h-container full-width wrap-reverse can-grow padding-nav">
+		<div class="h-container full-width wrap-reverse can-grow">
 			<div class="v-container w-xs font-medium white border h-auto p-10 m-top-30 child-p-v-5 left-container">
 
 				<div class="font-medium font-bold">Article's latest</div>
@@ -38,7 +38,7 @@
 
 				<div class="font-medium font-bold">Blog's latest</div>
 				{% for blogs_latest_link in blogs_latest %}
-					{{ include('template_fragment/_side_nav_entry.html.twig', {link: "/blog/" ~ blogs_latest_link.username, title:  blogs_latest_link.title}) }}
+					{{ include('template_fragment/_side_nav_entry.html.twig', {link: "/blog/" ~ blogs_latest_link.username ~ "#" ~ blogs_latest_link.id, title:  blogs_latest_link.title}) }}
 				{% endfor %}
 
 			</div>
