changed the edit user form. The user can no longer edit it's username but can set a displayed nickname. The displayed nickname is shown in blog and article

--- a/templates/blog/user_blog.html.twig
+++ b/templates/blog/user_blog.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-PCThings | {{ user.getUsername }}'s Blog
+PCThings | {{ user.getDisplayedNickName }}'s Blog
 {% endblock %}
 
 {% block pageTitle %}
-{{ user.getUsername }}'s Blog
+{{ user.getDisplayedNickName }}'s Blog
 {% endblock %}
 
 {% block bgImage %}
