--- a/templates/article/page.html.twig
+++ b/templates/article/page.html.twig
@@ -19,7 +19,7 @@ PCThings | {{ page.getTitle }}
 <div class="info">
     <div class="writer">
         <img src="{{ page.getWriter.getProfilPic }}">
-        <div>{{ page.getWriter.getUsername }}</div>
+        <div>{{ page.getWriter.getDisplayedNickName }}</div>
     </div>
     <div>Category: <a src="#">{{ page.getCategory.getName }}</a></div>
     <div>{{ page.getPublicationDate.getDate|date("d/m/Y") }}</div>
