--- a/templates/template_fragment/_blog.html.twig
+++ b/templates/template_fragment/_blog.html.twig
@@ -2,7 +2,7 @@
     <div class="blog-link-content">
         <img src={{ asset(blogPostLink.profilPic) }}>
         <div>
-            <p>{{ blogPostLink.username }}'s blog</p>
+            <p>{{ blogPostLink.displayedNickName }}'s blog</p>
         </div>
     </div>
     <div class="arrow">»</div>
