--- a/templates/template_fragment/_blog.html.twig
+++ b/templates/template_fragment/_blog.html.twig
@@ -1,6 +1,6 @@
 <div class="blog-link" onclick="window.location.href='{{ '/blog/' ~ blogPostLink.username }}';">
     <div class="blog-link-content">
-        <img src={{ asset(blogPostLink.profilPic) }}>
+        <img src={{ profil_pic_dir }}{{ asset(blogPostLink.profilPic) }} onerror="this.src='/images/icons/no_pic_user.png'">
         <div>
             <p>{{ blogPostLink.displayedNickName }}'s blog</p>
         </div>
