--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
 			<div id="website-title" onclick="window.location.href='/';"><img src="{{ asset("images/logos/logo_pcthings.png")}}"/></div>
 			<button onclick="window.location.href='/pages';">Pages</button>
 			<button onclick="window.location.href='/blog';">Blog</button>
+			<button onclick="window.location.href='/category';">Categories</button>
 			<button onclick="window.location.href='/contact';">Contact</button>
 			{% if is_granted('ROLE_IMPORT') %}
 			<button onclick="window.location.href='/import-picture';">import picture</button>
